# RememberFlask

./: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  config.py  docker-compose.yml  dropall.py  howto.txt  pyproject.toml  run.py
app/: __init__.py
app/api/v1/: __init__.py
app/api/v1/user/: __init__.py  crud.py
app/api_v1/: __init__.py
app/api_v1/account/: __init__.py  crud.py
app/domain/model/: __init__.py  account.py  base.py  user.py
app/domain/user/: __init__.py  user.py
app/infra/: database.py
migrations/: env.py
migrations/versions/: 5388ca9795c8_initial_mig.py  de33088856cc_initial_mig.py
