[tool.poetry]
name = "rememberflask"
version = "0.1.0"
description = ""
authors = ["Gabriel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
flask-restx = "^1.3.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
pre-commit = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
